chore commented some css code for light and dark mode issue with background

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -12,7 +12,7 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 /* ---> Commented this code for now becuase it is not letting set dark light theme correctly */
 /* body {
   color: var(--foreground);
